# ZERO-DAY-GUARDIAN

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
deploy/base/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  daemonset.yaml  kustomization.yaml  namespace.yaml  networkpolicy-isolation.yaml  operator-deployment.yaml  secrets.yaml  serviceaccount.yaml
deploy/base/crd/: guardianpolicy-crd.yaml
deploy/examples/: guardianpolicy-sample.yaml
deploy/overlays/dev/: kustomization.yaml
deploy/overlays/prod/: kustomization.yaml
detection-engine/: Dockerfile  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
detection-engine/src/main/java/com/zerodayguardian/detector/: DetectorApplication.java
detection-engine/src/main/java/com/zerodayguardian/detector/action/: ActionTracker.java  NetworkBlocker.java  PodIsolator.java  ProcessKiller.java  SafeActionExecutor.java
detection-engine/src/main/java/com/zerodayguardian/detector/alert/: AlertPayload.java  AlertService.java  ElasticIntegration.java  SplunkIntegration.java
detection-engine/src/main/java/com/zerodayguardian/detector/config/: KubernetesConfig.java  RingBufferConfig.java  ThreatIntelConfig.java
detection-engine/src/main/java/com/zerodayguardian/detector/detection/: AttackDetector.java  ContainerEscapeDetector.java  CryptojackingDetector.java  DetectionResult.java  LateralMovementDetector.java  SyscallSequenceAnalyzer.java
detection-engine/src/main/java/com/zerodayguardian/detector/event/: EventType.java  RingBufferReader.java  SyscallEvent.java
detection-engine/src/main/java/com/zerodayguardian/detector/forensic/: EvidenceCollector.java
detection-engine/src/main/java/com/zerodayguardian/detector/kubernetes/: AuditLogProcessor.java  PodSecurityMonitor.java  ServiceAccountWatcher.java
detection-engine/src/main/java/com/zerodayguardian/detector/metrics/: GuardianMetrics.java
detection-engine/src/main/resources/: application.yml  logback-spring.xml
docs/: architecture.md  deployment-guide.md  security-considerations.md
ebpf-monitor/: Cargo.toml  Dockerfile  rust-toolchain.toml
ebpf-monitor/.cargo/: config.toml
ebpf-monitor/ebpf-monitor/: Cargo.toml  build.rs
ebpf-monitor/ebpf-monitor-common/: Cargo.toml
ebpf-monitor/ebpf-monitor-common/src/: lib.rs
ebpf-monitor/ebpf-monitor-ebpf/: Cargo.toml
ebpf-monitor/ebpf-monitor-ebpf/src/: main.rs
ebpf-monitor/ebpf-monitor/src/: config.rs  container.rs  main.rs  ringbuf_writer.rs
guardian-operator/: Dockerfile  Makefile  go.mod  go.sum
guardian-operator/api/v1alpha1/: groupversion_info.go  types.go  zz_generated.deepcopy.go
guardian-operator/cmd/: main.go
guardian-operator/internal/controller/: daemonset_manager.go  guardianpolicy_controller.go  guardianpolicy_controller_test.go
proto/: events.md
scripts/: build-all.sh  deploy.sh  test-attack.sh  validate-cluster.sh
(+9 files in other folders)
